--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
       <h2>Welcome to the Quantum Research Portal</h2>
       <p>Explore quantum technologies, educational resources, and interactive simulations.</p>
     </section>
+    <section class="updates">
+      <h3>📌 최근 업데이트</h3>
+      <ul>
+        <li>2025.04.10 – 홈페이지 기본 구조 완성</li>
+        <li>2025.04.05 – 양자 안테나 구조 설계 개요 작성</li>
+      </ul>
+    </section>
+
   </main>
   <footer>
     <p>&copy; 2025 Quantum Research Group</p>
