--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
         <li>2025.04.05 – 양자 안테나 구조 설계 개요 작성</li>
       </ul>
     </section>
-
+    <section>
+      <h2>이미지 선택</h2>
+      <input type="file" id="imageInput" multiple accept="image/*">
+      <div class="preview-container" id="preview"></div>
+    </section>
   </main>
  <script>
     const imageInput = document.getElementById('imageInput');
