--- a/index.html
+++ b/index.html
@@ -29,11 +29,19 @@
         <li>2025.04.05 – 양자 안테나 구조 설계 개요 작성</li>
       </ul>
     </section>
+    <section class="content">
+     <h4>홍보이미지</h4>
+
+    <div class="image-gallery">
+      <img src="images/quantum_sensor_diagram.png" alt="Quantum Sensor Diagram">
+      <img src="images/microwave_entanglement.jpg" alt="Microwave Quantum Entanglement">
+  </div>
     <section>
       <h2>이미지 선택</h2>
       <input type="file" id="imageInput" multiple accept="image/*">
       <div class="preview-container" id="preview"></div>
     </section>
+    
   </main>
  
   <footer>
