--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
      <h4>홍보이미지</h4>
 
     <div class="image-gallery">
-      <img src="images/quantum_sensor_diagram.png" alt="Quantum Sensor Diagram">
-      <img src="images/microwave_entanglement.jpg" alt="Microwave Quantum Entanglement">
+      <img src="images/Quantum radar catalog 1.png" alt="Quantum radar catalog 1">
+      <img src="images/Dron detection.jpg" alt="Dron detection">
   </div>
     <section>
       <h2>이미지 선택</h2>
