--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
       <img src="images/Quantum radar catalog 1.png" alt="Quantum radar catalog 1">
       <img src="images/Dron detection.jpg" alt="Dron detection">
     </div>
+    </section>
+
     <section>
       <h2>이미지 선택</h2>
       <input type="file" id="imageInput" multiple accept="image/*">
