--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li><a href="about.html">About</a></li>
         <li><a href="resources.html">Resources</a></li>
         <li><a href="simulator.html">Simulator</a></li>
+        <li><a href="Quantum Sensor.html">Quantum Sensor</a></li>
       </ul>
     </nav>
   </header>
