--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
         <li><a href="about.html">About</a></li>
         <li><a href="resources.html">Resources</a></li>
         <li><a href="simulator.html">Simulator</a></li>
-        <li><a href="Quantum Sensor.html">Quantum Sensor</a></li>
+        <li><a href="Quantum Sensor Tree.html">Quantum Sensor</a></li>
       </ul>
     </nav>
   </header>
