--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <img src="images/Street light control.png" alt="Street light control" width="200" height="300">
     <img src="images/Trail monitoring.png" alt="Trail monitoring" width="200" height="300">
     <img src="images/Streetlight installation.png" alt="Streetlight installation" width="200" height="300">
-    
+    <img src="images/Cybertruck.png" alt="Cybertruck" width="300" height="300">
   </main>
   <footer>
     <p>&copy; 2025 Quantum Research Group</p>
