--- a/images/index.html
+++ b/images/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <header>
+    <img src="images/quantum_logo.png" alt="Quantum Company Logo" width="20" height="20" />
     <h1>Quantum Research</h1>
     <h2>Arsenal</h2>
     <nav>
